--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@
     margin-top: .5em
   }
 
+  input[type="submit"] {
+    background-color: turquoise;
+  }
+
   form {
     margin-top: 1em;
   }
