--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@
   #num-correct {
     text-align: center;
     color: aliceblue;
-    background-color: teal;
+    background-image: linear-gradient(teal, turquoise);
     font-size: 2em;
-    width: 20%;
+    width: 80%;
   }
   
   @media only screen and (max-width: 900px) {
