--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
   body {
     margin: 0 2em;
-  }
-
-  body:not(nav ul li),
-  input[type="submit"] {
-    font-size: 1.5em;
+    background-color: #f2f2f2;
+    color: #06425C;
+    font-size: 1.25em;
   }
 
   nav, 
@@ -34,6 +32,17 @@
 
   nav ul li a:visited {
     color: aliceblue;
+  }
+
+  main img:first-child {
+    width: 200px;
+    border-radius: 50%;
+    padding: 1em;
+    margin-top: 1em;
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   input[type="submit"] {
